--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,12 @@
 
 # BEGIN WordPress
+<IfModule mod_rewrite.c>
+RewriteEngine On
+RewriteBase /devtools1meydan2017/
+RewriteRule ^index\.php$ - [L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule . /devtools1meydan2017/index.php [L]
+</IfModule>
 
 # END WordPress
